src/OpenCvSharpExtern/core.h

CVAPI(ExceptionStatus) core_borderInterpolate(int p, int len, int borderType, int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::borderInterpolate(p, len, borderType);
    });
}
CVAPI(ExceptionStatus) core_copyMakeBorder(
    cv::_InputArray* src, cv::_OutputArray* dst, int top, int bottom, int left, int right, int borderType, interop::Scalar value)
{
    return cvTry([&] {
    cv::copyMakeBorder(*src, *dst, top, bottom, left, right, borderType, cpp(value));
    });
}
CVAPI(ExceptionStatus) core_add(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask, int dtype)
{
    return cvTry([&] {
    cv::add(*src1, *src2, *dst, entity(mask), dtype);
    });
}
CVAPI(ExceptionStatus) core_subtract_InputArray2(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask, int dtype)
{
    return cvTry([&] {
    cv::subtract(*src1, *src2, *dst, entity(mask), dtype);
    });
}
CVAPI(ExceptionStatus) core_subtract_InputArrayScalar(
    cv::_InputArray *src1, interop::Scalar src2, cv::_OutputArray *dst, cv::_InputArray *mask, int dtype)
{
    return cvTry([&] {
    cv::subtract(*src1, cpp(src2), *dst, entity(mask), dtype);
    });
}
CVAPI(ExceptionStatus) core_subtract_ScalarInputArray(
    interop::Scalar src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask, int dtype)
{
    return cvTry([&] {
    cv::subtract(cpp(src1), *src2, *dst, entity(mask), dtype);
    });
}
CVAPI(ExceptionStatus) core_multiply(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, double scale, int dtype)
{
    return cvTry([&] {
    cv::multiply(*src1, *src2, *dst, scale, dtype);
    });
}
CVAPI(ExceptionStatus) core_divide1(
    double scale, cv::_InputArray *src2, cv::_OutputArray *dst, int dtype)
{
    return cvTry([&] {
    cv::divide(scale, *src2, *dst, dtype);
    });
}
CVAPI(ExceptionStatus) core_divide2(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, double scale, int dtype)
{
    return cvTry([&] {
    cv::divide(*src1, *src2, *dst, scale, dtype);
    });
}
CVAPI(ExceptionStatus) core_scaleAdd(cv::_InputArray *src1, double alpha, cv::_InputArray *src2, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::scaleAdd(*src1, alpha, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_addWeighted(cv::_InputArray *src1, double alpha, cv::_InputArray *src2,
                             double beta, double gamma, cv::_OutputArray *dst, int dtype)
{
    return cvTry([&] {
    cv::addWeighted(*src1, alpha, *src2, beta, gamma, *dst, dtype);
    });
}
CVAPI(ExceptionStatus) core_convertScaleAbs(cv::_InputArray* src, cv::_OutputArray* dst, double alpha, double beta)
{
    return cvTry([&] {
    cv::convertScaleAbs(*src, *dst, alpha, beta);
    });
}
CVAPI(ExceptionStatus) core_LUT(cv::_InputArray* src, cv::_InputArray* lut, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::LUT(*src, *lut, *dst);
    });
}
CVAPI(ExceptionStatus) core_sum(cv::_InputArray* src, interop::Scalar* returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::sum(*src));
    });
}
CVAPI(ExceptionStatus) core_countNonZero(cv::_InputArray* src, int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::countNonZero(*src);
    });
}
CVAPI(ExceptionStatus) core_findNonZero(cv::_InputArray* src, cv::_OutputArray* idx)
{
    return cvTry([&] {
    cv::findNonZero(*src, *idx);
    });
}
CVAPI(ExceptionStatus) core_mean(cv::_InputArray* src, cv::_InputArray* mask, interop::Scalar* returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::mean(*src, entity(mask)));
    });
}
CVAPI(ExceptionStatus) core_meanStdDev_OutputArray(
    cv::_InputArray* src, cv::_OutputArray* mean, cv::_OutputArray* stddev, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::meanStdDev(*src, *mean, *stddev, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_meanStdDev_Scalar(
    cv::_InputArray* src, interop::Scalar* mean, interop::Scalar* stddev, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::Scalar mean0, stddev0;
    cv::meanStdDev(*src, mean0, stddev0, entity(mask));
    *mean = c(mean0);
    *stddev = c(stddev0);
    });
}
CVAPI(int) core_setBreakOnError(int flag)
{
    return cv::setBreakOnError(flag != 0) ? 1 : 0;
}
CVAPI(cv::ErrorCallback) redirectError(cv::ErrorCallback errCallback, void* userdata, void** prevUserdata)
{
    return cv::redirectError(errCallback, userdata, prevUserdata);
}
CVAPI(ExceptionStatus) core_setNumThreads(int nthreads)
{
    return cvTry([&] {
    cv::setNumThreads(nthreads);
    });
}
CVAPI(ExceptionStatus) core_getNumThreads(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getNumThreads();
    });
}
CVAPI(ExceptionStatus) core_getThreadNum(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getThreadNum();
    });
}
CVAPI(ExceptionStatus) core_getBuildInformation(std::string *buf)
{
    return cvTry([&] {
    const auto& str = cv::getBuildInformation();
    buf->assign(str);
    });
}
CVAPI(ExceptionStatus) core_getVersionString(char *buf, int bufLength)
{
    return cvTry([&] {
    const auto& str = cv::getVersionString();
    copyString(str, buf, bufLength);
    });
}
CVAPI(ExceptionStatus) core_getVersionMajor(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getVersionMajor();
    });
}
CVAPI(ExceptionStatus) core_getVersionMinor(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getVersionMinor();
    });
}
CVAPI(ExceptionStatus) core_getVersionRevision(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getVersionRevision();
    });
}
CVAPI(ExceptionStatus) core_getTickCount(int64* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getTickCount();
    });
}
CVAPI(ExceptionStatus) core_getTickFrequency(double* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getTickFrequency();
    });
}
CVAPI(ExceptionStatus) core_getCPUTickCount(int64* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getCPUTickCount();
    });
}
CVAPI(ExceptionStatus) core_checkHardwareSupport(int feature, int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::checkHardwareSupport(feature) ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_getHardwareFeatureName(int feature, std::string *buf)
{
    return cvTry([&] {
    const auto& str = cv::getHardwareFeatureName(feature);
    buf->assign(str);
    });
}
CVAPI(ExceptionStatus) core_getCPUFeaturesLine(std::string *buf)
{
    return cvTry([&] {
    const auto& str = cv::getCPUFeaturesLine();
    buf->assign(str);
    });
}
CVAPI(ExceptionStatus) core_getNumberOfCPUs(int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getNumberOfCPUs();
    });
}
CVAPI(ExceptionStatus) core_setUseOptimized(int onoff)
{
    return cvTry([&] {
    cv::setUseOptimized(onoff != 0);
    });
}
CVAPI(ExceptionStatus) core_useOptimized(int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::useOptimized() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_format(cv::_InputArray *mtx, int fmt, std::string *buf)
{
    return cvTry([&] {
    const auto formatted = cv::format(*mtx, static_cast<cv::Formatter::FormatType>(fmt));

    std::stringstream s;
    s << formatted;
    buf->assign(s.str());
    });
}